@@ -53,7 +53,7 @@ constant-78:		ok
 filename-mapping:		yes
 
 # Alternate formatting of numeric fields
-pretty-display:			yes
+pretty-display:			no
 
 # Allow complex OCCURS DEPENDING ON
 complex-odo:			no
@@ -138,6 +138,9 @@ accept-auto:		no # not verified yet
 # If yes, LENGTH OF occurs-fld is computed as size of field times OCCURS 
 # If no, LENGTH OF occurs-fld is computed as just size of field
 occurs-max-length-without-subscript: yes
+
+# Is LENGTH OF allows in DATA DIVISION
+length-in-data-division: yes
 
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
